as-alb/mastodon-infra.template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: CloudFormation template file for Mastodon (Infrastructure layer).
Parameters:
  Tag1Key:
    Description: Tag key
    Type: String
  Tag1Value:
    Description: Tag value
    Type: String
  Tag2Key:
    Description: Tag key
    Type: String
  Tag2Value:
    Description: Tag value
    Type: String
  SubnetAvailabilityZone:
    Description: Availability Zones of Subnet
    Type: 'List<AWS::EC2::AvailabilityZone::Name>'
  DBInstanceClass:
    Description: RDS instance type
    Type: String
    Default: db.t2.micro
    AllowedValues:
      - db.m4.large
      - db.m4.xlarge
      - db.m4.2xlarge
      - db.m4.4xlarge
      - db.m4.10xlarge
      - db.m3.medium
      - db.m3.large
      - db.m3.xlarge
      - db.m3.2xlarge
      - db.r3.large
      - db.r3.xlarge
      - db.r3.2xlarge
      - db.r3.4xlarge
      - db.r3.8xlarge
      - db.t2.micro
      - db.t2.small
      - db.t2.medium
      - db.t2.large
      - db.t3.micro
      - db.t3.small
      - db.t3.medium
      - db.t3.large
    ConstraintDescription: must be a valid RDS instance type.
  DBName:
    Description: Database schema name
    Type: String
  DBEngineVersion:
    Description: RDS (Postgresql) engine version
    Type: String
    AllowedValues:
      - 13.4
      - 13.5
      - 14.1
    ConstraintDescription: must be a valid RDS engine version.
  DBLicenseModel:
    Description: RDS (Postgresql) engine license model
    Type: String
    Default: postgresql-license
    AllowedValues:
      - postgresql-license
    ConstraintDescription: must be a valid RDS license model.
  DBMasterUsername:
    Description: Database master user name
    Type: String
  DBMasterUserPassword:
    Description: Database master user password
    Type: String
  DBStorageType:
    Description: RDS (Postgresql) storage type
    Type: String
    Default: standard
    AllowedValues:
      - standard
      - gp2
      - io1
    ConstraintDescription: must be a valid RDS storage type.
  DBSnapshotIdentifier:
    Description: RDS Snapshot ID
    Type: String
    ConstraintDescription: must be a valid RDS storage type.
  ElastiCacheNodeType:
    Description: ElastiCache node type
    Type: String
    Default: cache.t2.micro
    AllowedValues:
      - cache.t2.micro
      - cache.t2.small
      - cache.t2.medium
      - cache.m3.medium
      - cache.m3.large
      - cache.m3.xlarge
      - cache.m3.2xlarge
      - cache.m4.large
      - cache.m4.xlarge
      - cache.m4.2xlarge
      - cache.m4.4xlarge
      - cache.m4.10xlarge
      - cache.r3.large
      - cache.r3.xlarge
      - cache.r3.2xlarge
      - cache.r3.4xlarge
      - cache.r3.8xlarge
  ElastiCacheVersion:
    Description: ElastiCache (Redis) engine version
    Type: String
    AllowedValues:
      - 6.x
      - 5.0.6
    ConstraintDescription: must be a valid Elasticache engine version.
  EC2KeyPair:
    Description: EC2 Key Pair Name
    Type: 'AWS::EC2::KeyPair::KeyName'
    ConstraintDescription: must be a valid EC2 Key Pair Name.
  NATInstanceType:
    Description: EC2 instance type of NAT instance.
    Type: String
    Default: t2.micro
    ConstraintDescription: must be a valid EC2 instance type.
  ContentsAWSAccessKey:
    Description: AWSAccessKey for S3 access.
    Type: String
  ContentsAWSAccessSecret:
    Description: AWSAccessSecret for S3 access.
    Type: String
  LBAccessLogS3Bucket:
    Description: S3 bucket name of access log of load balancer.
    Type: String
    ConstraintDescription: must be a valid S3 bucket name.
  LBAccessLogPrefix:
    Description: Prefix of access log of load balancer.
    Type: String
  SMTPHostPort:
    Description: SMTP host port number.
    Default: '587'
    Type: Number
Mappings:
  CIDR:
    VPC:
      IP: 10.0.0.0/16
    PrivateSubnet1:
      IP: 10.0.10.0/24
    PrivateSubnet2:
      IP: 10.0.11.0/24
    PublicSubnet1:
      IP: 10.0.20.0/24
    PublicSubnet2:
      IP: 10.0.21.0/24
    All:
      IP: 0.0.0.0/0
      IPv6: ::/0
  RDSConfig:
    Port:
      Value: '5432'
    Storage:
      ValueByGb: '20'
    BackupRetentionPeriod:
      Value: '3'
  ElastiCacheConfig:
    Port:
      Value: '6379'
    SnapshotRetentionLimit:
      Value: '3'
    SnapshotWindow:
      Value: '05:00-09:00'
  InstanceConfig:
    Storage:
      ValueByGb: '20'
  RegionConfig:
    us-east-1:
      Principal: '127311923021'
      NATAMI: ami-0c09e99c7d9bb3ec3
    us-east-2:
      Principal: 033677994240
      NATAMI: ami-0434edca72f474cce
    us-west-1:
      Principal: 027434742980
      NATAMI: ami-056568e1a688a8374
    us-west-2:
      Principal: '797873946194'
      NATAMI: ami-055d2b8433ccb245c
    ca-central-1:
      Principal: '985666609251'
      NATAMI: ami-0263e201b916f6cad
    eu-west-1:
      Principal: '156460612806'
      NATAMI: ami-03581a4bc9c44cdd3
    eu-west-2:
      Principal: '652711504416'
      NATAMI: ami-0bbb886f29931c526
    eu-west-3:
      Principal: '009996457667'
      NATAMI: ami-0f1241ac00d426db3
    eu-central-1:
      Principal: 054676820928
      NATAMI: ami-0e899c48708d2f8b4
    ap-northeast-1:
      Principal: '582318560864'
      NATAMI: ami-07a79a9aa595c4ae5
    ap-northeast-2:
      Principal: '600734575887'
      NATAMI: ami-00550ccc38e992b78
    ap-southeast-1:
      Principal: '114774131450'
      NATAMI: ami-0756fa32889c749e2
    ap-southeast-2:
      Principal: '783225319266'
      NATAMI: ami-002519e717bb4797a
    ap-south-1:
      Principal: '718504428378'
      NATAMI: ami-022f0d1a91a02fc8f
    sa-east-1:
      Principal: '507241528517'
      NATAMI: ami-02149b9f2c727b4de
Conditions:
  IsVirginia: !Equals 
    - !Ref 'AWS::Region'
    - us-east-1
  HasDBSnapshotIdentifier: !Not 
    - !Equals 
      - !Ref DBSnapshotIdentifier
      - ''
Resources:
  LbAccessLogBucketPolicy:
    Type: 'AWS::S3::BucketPolicy'
    Properties:
      Bucket: !Ref LBAccessLogS3Bucket
      PolicyDocument:
        Id: Policy1493789607994
        Version: 2012-10-17
        Statement:
          - Sid: Stmt1493789603166
            Action: 's3:PutObject'
            Effect: Allow
            Resource: !Sub >-
              arn:aws:s3:::${LBAccessLogS3Bucket}/${LBAccessLogPrefix}/AWSLogs/${AWS::AccountId}/*
            Principal:
              AWS:
                - !FindInMap [ RegionConfig, !Ref 'AWS::Region', Principal ]

  #
  # VPC
  #
  VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: !FindInMap [ CIDR, VPC, IP ]
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-VPC'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
  Ipv6VPCCidrBlock:
    Type: AWS::EC2::VPCCidrBlock
    Properties:
      AmazonProvidedIpv6CidrBlock: true
      VpcId: !Ref 'VPC'
  InternetGW:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-INetGW'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
  VPCGatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      InternetGatewayId: !Ref InternetGW
      VpcId: !Ref VPC
  VPCRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-VPCRouteTable'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
  VPCRouteTableRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: VPCGatewayAttachment
    Properties:
      DestinationCidrBlock: !FindInMap [ CIDR, All, IP ]
      GatewayId: !Ref InternetGW
      RouteTableId: !Ref VPCRouteTable
  VPCRouteTableEoigRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: VPCGatewayAttachment
    Properties:
      DestinationIpv6CidrBlock: !FindInMap [ CIDR, All, IPv6 ]
      GatewayId: !Ref InternetGW
      RouteTableId: !Ref VPCRouteTable

  #
  # Subnet
  #
  PrivateSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: !FindInMap [ CIDR, PrivateSubnet1, IP ]
      MapPublicIpOnLaunch: false
      AvailabilityZone: !Select 
        - '0'
        - !Ref SubnetAvailabilityZone
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-PrivateSubnet1'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
      VpcId: !Ref VPC
  PrivateSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: !FindInMap [ CIDR, PrivateSubnet2, IP ]
      MapPublicIpOnLaunch: false
      AvailabilityZone: !Select 
        - '1'
        - !Ref SubnetAvailabilityZone
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-PrivateSubnet2'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
      VpcId: !Ref VPC
  PublicSubnet1:
    Type: 'AWS::EC2::Subnet'
    DependsOn:
      - Ipv6VPCCidrBlock
    Properties:
      CidrBlock: !FindInMap [ CIDR, PublicSubnet1, IP ]
      Ipv6CidrBlock: !Sub ['${Param1}20::/64', {
        Param1: !Select ['0', !Split ['00::/', !Select [0, !GetAtt 'VPC.Ipv6CidrBlocks']]]}]
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select 
        - '0'
        - !Ref SubnetAvailabilityZone
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-PublicSubnet1'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
      VpcId: !Ref VPC
  PublicSubnet2:
    Type: 'AWS::EC2::Subnet'
    DependsOn:
      - Ipv6VPCCidrBlock
    Properties:
      CidrBlock: !FindInMap [ CIDR, PublicSubnet2, IP ]
      Ipv6CidrBlock: !Sub ['${Param1}21::/64', {
        Param1: !Select ['0', !Split ['00::/', !Select [0, !GetAtt 'VPC.Ipv6CidrBlocks']]]}]
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select 
        - '1'
        - !Ref SubnetAvailabilityZone
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-PublicSubnet2'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
      VpcId: !Ref VPC

  #
  # NetworkACL(Public Subnet)
  #
  PublicSubnetNetworkAcl:
    Type: 'AWS::EC2::NetworkAcl'
    Properties:
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-PublicSubnetNetworkAcl'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
      VpcId: !Ref VPC
  PublicSubnetNetworkAclEntryIngressHttp:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      CidrBlock: !FindInMap [ CIDR, All, IP ]
      Egress: false
      NetworkAclId: !Ref PublicSubnetNetworkAcl
      PortRange:
        From: 80
        To: 80
      Protocol: 6
      RuleAction: allow
      RuleNumber: 110
  PublicSubnetNetworkAclEntryIngressHttpIpv6:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      Ipv6CidrBlock: !FindInMap [ CIDR, All, IPv6 ]
      Egress: false
      NetworkAclId: !Ref PublicSubnetNetworkAcl
      PortRange:
        From: 80
        To: 80
      Protocol: 6
      RuleAction: allow
      RuleNumber: 115
  PublicSubnetNetworkAclEntryIngressHttps:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      CidrBlock: !FindInMap [ CIDR, All, IP ]
      Egress: false
      NetworkAclId: !Ref PublicSubnetNetworkAcl
      PortRange:
        From: 443
        To: 443
      Protocol: 6
      RuleAction: allow
      RuleNumber: 120
  PublicSubnetNetworkAclEntryIngressHttpsIpv6:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      Ipv6CidrBlock: !FindInMap [ CIDR, All, IPv6 ]
      Egress: false
      NetworkAclId: !Ref PublicSubnetNetworkAcl
      PortRange:
        From: 443
        To: 443
      Protocol: 6
      RuleAction: allow
      RuleNumber: 125
  PublicSubnetNetworkAclEntryIngressSSH:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      CidrBlock: !FindInMap [ CIDR, All, IP ]
      Egress: false
      NetworkAclId: !Ref PublicSubnetNetworkAcl
      PortRange:
        From: 22
        To: 22
      Protocol: 6
      RuleAction: allow
      RuleNumber: 130
  PublicSubnetNetworkAclEntryIngressConnectBack:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      CidrBlock: !FindInMap [ CIDR, All, IP ]
      Egress: false
      NetworkAclId: !Ref PublicSubnetNetworkAcl
      PortRange:
        From: 1024
        To: 65535
      Protocol: 6
      RuleAction: allow
      RuleNumber: 190
  PublicSubnetNetworkAclEntryIngressConnectBackIpv6:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      Ipv6CidrBlock: !FindInMap [ CIDR, All, IPv6 ]
      Egress: false
      NetworkAclId: !Ref PublicSubnetNetworkAcl
      PortRange:
        From: 1024
        To: 65535
      Protocol: 6
      RuleAction: allow
      RuleNumber: 195
  PublicSubnetNetworkAclEntryIngressPrivateSubnet1:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      CidrBlock: !FindInMap [ CIDR, PrivateSubnet1, IP ]
      Egress: false
      NetworkAclId: !Ref PublicSubnetNetworkAcl
      Protocol: -1
      RuleAction: allow
      RuleNumber: 300
  PublicSubnetNetworkAclEntryIngressPrivateSubnet2:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      CidrBlock: !FindInMap [ CIDR, PrivateSubnet2, IP ]
      Egress: false
      NetworkAclId: !Ref PublicSubnetNetworkAcl
      Protocol: -1
      RuleAction: allow
      RuleNumber: 310
  PublicSubnetNetworkAclEntryEgress:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      CidrBlock: !FindInMap [ CIDR, All, IP ]
      Egress: true
      NetworkAclId: !Ref PublicSubnetNetworkAcl
      Protocol: -1
      RuleAction: allow
      RuleNumber: 100
  PublicSubnetNetworkAclEntryEgressIpv6:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      Ipv6CidrBlock: !FindInMap [ CIDR, All, IPv6 ]
      Egress: true
      NetworkAclId: !Ref PublicSubnetNetworkAcl
      Protocol: -1
      RuleAction: allow
      RuleNumber: 105
  PublicSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref VPCRouteTable
      SubnetId: !Ref PublicSubnet1
  PublicSubnet2RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref VPCRouteTable
      SubnetId: !Ref PublicSubnet2

  #
  # NetworkACL(Private Subnet)
  #
  PrivateSubnetNetworkAcl:
    Type: 'AWS::EC2::NetworkAcl'
    Properties:
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-PrivateSubnetNetworkAcl'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
      VpcId: !Ref VPC
  PrivateSubnet1NetworkAclEntryIngress:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      CidrBlock: !FindInMap [ CIDR, PublicSubnet1, IP ]
      Egress: false
      NetworkAclId: !Ref PrivateSubnetNetworkAcl
      Protocol: -1
      RuleAction: allow
      RuleNumber: 100
  PrivateSubnet2NetworkAclEntryIngress:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      CidrBlock: !FindInMap [ CIDR, PublicSubnet2, IP ]
      Egress: false
      NetworkAclId: !Ref PrivateSubnetNetworkAcl
      Protocol: -1
      RuleAction: allow
      RuleNumber: 110
  PrivateSubnetNetworkAclEntryIngressConnectBack:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      CidrBlock: !FindInMap [ CIDR, All, IP ]
      Egress: false
      NetworkAclId: !Ref PrivateSubnetNetworkAcl
      PortRange:
        From: 1024
        To: 65535
      Protocol: 6
      RuleAction: allow
      RuleNumber: 190
  PrivateSubnetNetworkAclEntryEgress:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      CidrBlock: !FindInMap [ CIDR, All, IP ]
      Egress: true
      NetworkAclId: !Ref PrivateSubnetNetworkAcl
      Protocol: -1
      RuleAction: allow
      RuleNumber: 100
  PrivateSubnet1ToNetworkACL:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId: !Ref PrivateSubnet1
      NetworkAclId: !Ref PrivateSubnetNetworkAcl
  PrivateSubnet2ToNetworkACL:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId: !Ref PrivateSubnet2
      NetworkAclId: !Ref PrivateSubnetNetworkAcl
  PublicSubnet1ToNetworkACL:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet1
      NetworkAclId: !Ref PublicSubnetNetworkAcl
  PublicSubnet2ToNetworkACL:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet2
      NetworkAclId: !Ref PublicSubnetNetworkAcl
  SecurityGroupBastionInstance:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Security Group for bastion Instance Host
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-SecurityGroupBastion'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
      VpcId: !Ref VPC
  SecurityGroupBastionInstanceIngressSSH:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIp: !FindInMap [ CIDR, All, IP ]
      FromPort: 22
      ToPort: 22
      GroupId: !Ref SecurityGroupBastionInstance
      IpProtocol: tcp
  SecurityGroupBastionInstanceEgress:
    Type: 'AWS::EC2::SecurityGroupEgress'
    Properties:
      CidrIp: !FindInMap [ CIDR, All, IP ]
      GroupId: !Ref SecurityGroupBastionInstance
      IpProtocol: '-1'

  #
  # SecurityGroup(NAT)
  #
  SecurityGroupNATInstance:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Security Group for NAT instance.
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-SecurityGroupNAT'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
      VpcId: !Ref VPC
  SecurityGroupNATInstanceIngressPrivateSubnet1Http:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIp: !FindInMap [ CIDR, PrivateSubnet1, IP ]
      FromPort: 80
      ToPort: 80
      GroupId: !Ref SecurityGroupNATInstance
      IpProtocol: tcp
  SecurityGroupNATInstanceIngressPrivateSubnet2Http:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIp: !FindInMap [ CIDR, PrivateSubnet2, IP ]
      FromPort: 80
      ToPort: 80
      GroupId: !Ref SecurityGroupNATInstance
      IpProtocol: tcp
  SecurityGroupNATInstanceIngressPrivateSubnet1Https:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIp: !FindInMap [ CIDR, PrivateSubnet1, IP ]
      FromPort: 443
      ToPort: 443
      GroupId: !Ref SecurityGroupNATInstance
      IpProtocol: tcp
  SecurityGroupNATInstanceIngressPrivateSubnet2Https:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIp: !FindInMap [ CIDR, PrivateSubnet2, IP ]
      FromPort: 443
      ToPort: 443
      GroupId: !Ref SecurityGroupNATInstance
      IpProtocol: tcp
  SecurityGroupNATInstanceIngressPrivateSubnet1Smtp:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIp: !FindInMap [ CIDR, PrivateSubnet1, IP ]
      FromPort: !Ref SMTPHostPort
      ToPort: !Ref SMTPHostPort
      GroupId: !Ref SecurityGroupNATInstance
      IpProtocol: tcp
  SecurityGroupNATInstanceIngressPrivateSubnet2Smtp:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIp: !FindInMap [ CIDR, PrivateSubnet2, IP ]
      FromPort: !Ref SMTPHostPort
      ToPort: !Ref SMTPHostPort
      GroupId: !Ref SecurityGroupNATInstance
      IpProtocol: tcp
  # SecurityGroupNATInstanceIngressSSH:
  #   Type: 'AWS::EC2::SecurityGroupIngress'
  #   Properties:
  #     CidrIp: !FindInMap [ CIDR, All, IP ]
  #     FromPort: 22
  #     ToPort: 22
  #     GroupId: !Ref SecurityGroupNATInstance
  #     IpProtocol: tcp
  SecurityGroupNATInstanceEgress:
    Type: 'AWS::EC2::SecurityGroupEgress'
    Properties:
      CidrIp: !FindInMap [ CIDR, All, IP ]
      GroupId: !Ref SecurityGroupNATInstance
      IpProtocol: '-1'

  #
  # SecurityGroup(Mastodon)
  #
  SecurityGroupMastodonInstance:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Security Group for Mastodon Instance Host
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-SecurityGroupMastodon'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
      VpcId: !Ref VPC
  SecurityGroupMastodonInstanceIngressHttp:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIp: !FindInMap [ CIDR, All, IP ]
      FromPort: 80
      ToPort: 80
      GroupId: !Ref SecurityGroupMastodonInstance
      IpProtocol: tcp
  SecurityGroupMastodonInstanceIngressHttpIpv6:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIpv6: !FindInMap [ CIDR, All, IPv6 ]
      FromPort: 80
      ToPort: 80
      GroupId: !Ref SecurityGroupMastodonInstance
      IpProtocol: tcp
  SecurityGroupMastodonInstanceIngressHttps:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIp: !FindInMap [ CIDR, All, IP ]
      FromPort: 443
      ToPort: 443
      GroupId: !Ref SecurityGroupMastodonInstance
      IpProtocol: tcp
  SecurityGroupMastodonInstanceIngressHttpsIpv6:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIpv6: !FindInMap [ CIDR, All, IPv6 ]
      FromPort: 443
      ToPort: 443
      GroupId: !Ref SecurityGroupMastodonInstance
      IpProtocol: tcp
  SecurityGroupMastodonInstanceIngressSSH:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIp: !FindInMap [ CIDR, All, IP ]
      FromPort: 22
      ToPort: 22
      GroupId: !Ref SecurityGroupMastodonInstance
      IpProtocol: tcp
  SecurityGroupMastodonInstanceEgress:
    Type: 'AWS::EC2::SecurityGroupEgress'
    Properties:
      CidrIp: !FindInMap [ CIDR, All, IP ]
      GroupId: !Ref SecurityGroupMastodonInstance
      IpProtocol: '-1'

  #
  # EC2 Instance (NAT)
  #
  NATInstanceNetworkIF:
    Type: 'AWS::EC2::NetworkInterface'
    Properties:
      Description: NAT Instance Network Interface.
      GroupSet:
        - !Ref SecurityGroupNATInstance
      SourceDestCheck: false
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-NATNetworkIF'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
  NATInstance:
    Type: 'AWS::EC2::Instance'
    DependsOn: VPCGatewayAttachment
    Properties:
      DisableApiTermination: false
      ImageId: !FindInMap [ RegionConfig, !Ref 'AWS::Region', NATAMI ]
      InstanceInitiatedShutdownBehavior: stop
      InstanceType: !Ref NATInstanceType
      KeyName: !Ref EC2KeyPair
      Monitoring: false
      NetworkInterfaces:
        - DeviceIndex: '0'
          NetworkInterfaceId: !Ref NATInstanceNetworkIF
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-NAT'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
  NATRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-NATRouteTable'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
  NATRoute:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref NATRouteTable
      DestinationCidrBlock: !FindInMap [ CIDR, All, IP ]
      InstanceId: !Ref NATInstance
  PrivateSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref NATRouteTable
      SubnetId: !Ref PrivateSubnet1
  PrivateSubnet2RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref NATRouteTable
      SubnetId: !Ref PrivateSubnet2
  VPCEndpoint:
    Type: 'AWS::EC2::VPCEndpoint'
    Properties:
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal: '*'
            Action:
              - 's3:*'
            Resource:
              - 'arn:aws:s3:::*'
      RouteTableIds:
        - !Ref VPCRouteTable
        - !Ref NATRouteTable
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.s3'
      VpcId: !Ref VPC

  #
  # SecrityGroup (RDS)
  #
  SecurityGroupRDS:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Security Group for RDS Instance Host
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-SecurityGroupRDS'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
      VpcId: !Ref VPC
  SecurityGroupRDSIngressPublicSubnet1:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIp: !FindInMap [ CIDR, PublicSubnet1, IP ]
      FromPort: !FindInMap [ RDSConfig, Port, Value ]
      ToPort: !FindInMap [ RDSConfig, Port, Value ]
      GroupId: !Ref SecurityGroupRDS
      IpProtocol: tcp
  SecurityGroupRDSIngressPublicSubnet2:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIp: !FindInMap [ CIDR, PublicSubnet2, IP ]
      FromPort: !FindInMap [ RDSConfig, Port, Value ]
      ToPort: !FindInMap [ RDSConfig, Port, Value ]
      GroupId: !Ref SecurityGroupRDS
      IpProtocol: tcp
  SecurityGroupRDSIngressPrivateSubnet1:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIp: !FindInMap [ CIDR, PrivateSubnet1, IP ]
      FromPort: !FindInMap [ RDSConfig, Port, Value ]
      ToPort: !FindInMap [ RDSConfig, Port, Value ]
      GroupId: !Ref SecurityGroupRDS
      IpProtocol: tcp
  SecurityGroupRDSIngressPrivateSubnet2:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIp: !FindInMap [ CIDR, PrivateSubnet2, IP ]
      FromPort: !FindInMap [ RDSConfig, Port, Value ]
      ToPort: !FindInMap [ RDSConfig, Port, Value ]
      GroupId: !Ref SecurityGroupRDS
      IpProtocol: tcp
  SecurityGroupRDSEgress:
    Type: 'AWS::EC2::SecurityGroupEgress'
    Properties:
      CidrIp: !FindInMap [ CIDR, All, IP ]
      GroupId: !Ref SecurityGroupRDS
      IpProtocol: '-1'
  RDSSubnetGroup:
    Type: 'AWS::RDS::DBSubnetGroup'
    Properties:
      DBSubnetGroupDescription: RDS Subnet Group
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-RDSSubnetGroup'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
  #
  # Instance (RDS)
  #
  RDSInstance:
    Type: 'AWS::RDS::DBInstance'
    DependsOn: VPCGatewayAttachment
    Properties:
      AllocatedStorage: !FindInMap [ RDSConfig, Storage, ValueByGb ]
      AllowMajorVersionUpgrade: false
      AutoMinorVersionUpgrade: true
      AvailabilityZone: !Select 
        - '0'
        - !Ref SubnetAvailabilityZone
      BackupRetentionPeriod: !FindInMap [ RDSConfig, BackupRetentionPeriod, Value ]
      CopyTagsToSnapshot: true
      DBInstanceClass: !Ref DBInstanceClass
      VPCSecurityGroups:
        - !Ref SecurityGroupRDS
      DBSubnetGroupName: !Ref RDSSubnetGroup
      DBSnapshotIdentifier: !If 
        - HasDBSnapshotIdentifier
        - !Ref DBSnapshotIdentifier
        - ''
      Engine: postgres
      EngineVersion: !Ref DBEngineVersion
      LicenseModel: !Ref DBLicenseModel
      MasterUsername: !Ref DBMasterUsername
      MasterUserPassword: !Ref DBMasterUserPassword
      MultiAZ: false
      Port: !FindInMap [ RDSConfig, Port, Value ]
      PubliclyAccessible: false
      StorageEncrypted: false
      StorageType: !Ref DBStorageType
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-Postgresql'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
  #
  # SecrityGroup (ElastiCache)
  #
  SecurityGroupElastiCache:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Security Group for ElastiCache Instance Host
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-SecurityGroupElastiCache'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
      VpcId: !Ref VPC
  SecurityGroupElastiCacheIngressPublicSubnet1:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIp: !FindInMap [ CIDR, PublicSubnet1, IP ]
      FromPort: !FindInMap [ ElastiCacheConfig, Port, Value ]
      ToPort: !FindInMap [ ElastiCacheConfig, Port, Value ]
      GroupId: !Ref SecurityGroupElastiCache
      IpProtocol: tcp
  SecurityGroupElastiCacheIngressPublicSubnet2:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIp: !FindInMap [ CIDR, PublicSubnet2, IP ]
      FromPort: !FindInMap [ ElastiCacheConfig, Port, Value ]
      ToPort: !FindInMap [ ElastiCacheConfig, Port, Value ]
      GroupId: !Ref SecurityGroupElastiCache
      IpProtocol: tcp
  SecurityGroupElastiCacheIngressPrivateSubnet1:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIp: !FindInMap [ CIDR, PrivateSubnet1, IP ]
      FromPort: !FindInMap [ ElastiCacheConfig, Port, Value ]
      ToPort: !FindInMap [ ElastiCacheConfig, Port, Value ]
      GroupId: !Ref SecurityGroupElastiCache
      IpProtocol: tcp
  SecurityGroupElastiCacheIngressPrivateSubnet2:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIp: !FindInMap [ CIDR, PrivateSubnet2, IP ]
      FromPort: !FindInMap [ ElastiCacheConfig, Port, Value ]
      ToPort: !FindInMap [ ElastiCacheConfig, Port, Value ]
      GroupId: !Ref SecurityGroupElastiCache
      IpProtocol: tcp
  SecurityGroupElastiCacheEgress:
    Type: 'AWS::EC2::SecurityGroupEgress'
    Properties:
      CidrIp: !FindInMap [ CIDR, All, IP ]
      GroupId: !Ref SecurityGroupElastiCache
      IpProtocol: '-1'
  ElastiCacheSubnetGroup:
    Type: 'AWS::ElastiCache::SubnetGroup'
    Properties:
      CacheSubnetGroupName: !Join 
        - '-'
        - - !Ref 'AWS::StackName'
          - ECSubnetGroup
      Description: SubnetGroup for ElastiCache instance.
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
  #
  # Cluster (ElastiCache)
  #
  ElastiCacheCluster:
    Type: 'AWS::ElastiCache::CacheCluster'
    Properties:
      AutoMinorVersionUpgrade: true
      CacheNodeType: !Ref ElastiCacheNodeType
      CacheSubnetGroupName: !Ref ElastiCacheSubnetGroup
      ClusterName: !Ref 'AWS::StackName' 
      Engine: redis
      EngineVersion: !Ref ElastiCacheVersion
      NumCacheNodes: 1
      Port: !FindInMap 
        - ElastiCacheConfig
        - Port
        - Value
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-RedisCache'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
      VpcSecurityGroupIds:
        - !GetAtt 
          - SecurityGroupElastiCache
          - GroupId
Outputs:
  VPC:
    Description: VPC ID
    Value: !Ref VPC
    Export:
      Name: !Sub '${AWS::StackName}-VPC'
  SubnetAvailabilityZone1:
    Description: Availability Zones of Subnet
    Value: !Select 
      - '0'
      - !Ref SubnetAvailabilityZone
    Export:
      Name: !Sub '${AWS::StackName}-SubnetAvailabilityZone1'
  SubnetAvailabilityZone2:
    Description: Availability Zones of Subnet
    Value: !Select 
      - '1'
      - !Ref SubnetAvailabilityZone
    Export:
      Name: !Sub '${AWS::StackName}-SubnetAvailabilityZone2'
  PrivateSubnet1:
    Description: Private Subnet
    Value: !Ref PrivateSubnet1
    Export:
      Name: !Sub '${AWS::StackName}-PrivateSubnet1'
  PrivateSubnet2:
    Description: Private Subnet
    Value: !Ref PrivateSubnet2
    Export:
      Name: !Sub '${AWS::StackName}-PrivateSubnet2'
  PublicSubnet1:
    Description: Public Subnet
    Value: !Ref PublicSubnet1
    Export:
      Name: !Sub '${AWS::StackName}-PublicSubnet1'
  PublicSubnet2:
    Description: Public Subnet
    Value: !Ref PublicSubnet2
    Export:
      Name: !Sub '${AWS::StackName}-PublicSubnet2'
  AWSAccessKey:
    Description: AWSAccessKey.
    Value: !Ref ContentsAWSAccessKey
    Export:
      Name: !Sub '${AWS::StackName}-AWSAccessKey'
  AWSAccessSecret:
    Description: AWSAccessSecret.
    Value: !Ref ContentsAWSAccessSecret
    Export:
      Name: !Sub '${AWS::StackName}-AWSAccessSecret'
  SecurityGroupMastodonInstance:
    Description: Security Group ID for mastodon instance.
    Value: !Ref SecurityGroupMastodonInstance
    Export:
      Name: !Sub '${AWS::StackName}-SecurityGroupMastodonInstance'
  RDSInstanceEndPoint:
    Description: Address of RDS
    Value: !GetAtt 
      - RDSInstance
      - Endpoint.Address
    Export:
      Name: !Sub '${AWS::StackName}-RDSInstanceEndPoint'
  RDSInstanceEndPointPort:
    Description: Port number of RDS
    Value: !GetAtt 
      - RDSInstance
      - Endpoint.Port
    Export:
      Name: !Sub '${AWS::StackName}-RDSInstanceEndPointPort'
  DBName:
    Value: !Ref DBName
    Description: Database name
    Export:
      Name: !Sub '${AWS::StackName}-DBName'
  DBMasterUsername:
    Value: !Ref DBMasterUsername
    Description: Master user name of Database
    Export:
      Name: !Sub '${AWS::StackName}-DBMasterUsername'
  DBMasterUserPassword:
    Value: !Ref DBMasterUserPassword
    Description: Master user password of Database
    Export:
      Name: !Sub '${AWS::StackName}-DBMasterUserPassword'

  ElasticacheEndPoint:
    Description: Address of Elasticache
    Value: !GetAtt 
      - ElastiCacheCluster
      - RedisEndpoint.Address
    Export:
      Name: !Sub '${AWS::StackName}-ElasticacheEndPoint'
  ElasticacheEndPointPort:
    Description: Port number of Elasticache
    Value: !GetAtt 
      - ElastiCacheCluster
      - RedisEndpoint.Port
    Export:
      Name: !Sub '${AWS::StackName}-ElasticacheEndPointPort'
  SecurityGroupBastionInstance:
    Description: SecurityGroupID of Bastion
    Value: !Ref SecurityGroupBastionInstance
    Export:
      Name: !Sub '${AWS::StackName}-SecurityGroupBastionInstance'
